--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -188,9 +188,68 @@ html {
   width: 5rem;
 }
 
-/* Header */
+/* Main */
+
+.main {
+  max-width: ;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2.5rem;
+}
 
 .h1 {
   font-size: 4rem;
   font-weight: bold;
+  color: #333;
+}
+
+.main-portfolio {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-around; */
+}
+
+.web-screenshot {
+  max-width:100%;
+  height:auto;
+}
+
+.portfolio-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.portfolio-title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin: 1rem 0;
+}
+
+.portfolio-description {
+  font-size: 1.5rem;
+}
+
+
+/* Footer */
+
+.up-footer {
+  height: 12rem;
+  background-color: #4b4b4b;
+}
+
+.subfooter {
+  height: 4rem;
+  background-color: #3d3d3d;
+}
+
+b {
+  font-weight: bold;
+}
+
+.copyright {
+  font-size: 1.3rem;
+  color: #b2bec3;
 }
