--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -191,7 +191,6 @@ html {
 /* Main */
 
 .main {
-  max-width: ;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -204,28 +203,36 @@ html {
   color: #333;
 }
 
+.h3-main {
+  margin: 2rem 0;
+  font-size: 2rem;
+}
+
 .main-portfolio {
+  max-width: 90vw;
   margin-top: 3rem;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-around; */
 }
 
 .web-screenshot {
   max-width:100%;
   height:auto;
+  border: 2px solid #0c2461;
+  border-radius: 5px;
 }
 
 .portfolio-item {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 6rem;
 }
 
 .portfolio-title {
   font-size: 2.5rem;
   font-weight: bold;
-  margin: 1rem 0;
+  margin: 2rem 0;
 }
 
 .portfolio-description {
@@ -236,13 +243,19 @@ html {
 /* Footer */
 
 .up-footer {
-  height: 12rem;
+  height: 20rem;
   background-color: #4b4b4b;
+  color: whitesmoke;
 }
 
 .subfooter {
   height: 4rem;
   background-color: #3d3d3d;
+}
+
+.footer-title {
+  font-size: 1.8rem;
+  font-weight: bold;
 }
 
 b {
