--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -15,7 +15,8 @@ html {
 /* Navigation */
 
 .nav {
-  background-color: #fff;
+  background-color: #34495e;
+  /* background-color: #dfe6e9; */
   box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
   position: fixed;
   width: 100%;
@@ -27,7 +28,7 @@ html {
   padding: 0;
   list-style: none;
   overflow: hidden;
-  background-color: #fff;
+  background-color: #34495e;;
 }
 
 .nav li a {
@@ -35,13 +36,13 @@ html {
   padding: 20px 20px;
   border-right: 1px solid #f4f4f4;
   text-decoration: none;
-  color: black;
+  color: white;
   font-size: 1.6rem;
 }
 
 .nav li a:hover,
 .nav .menu-btn:hover {
-  background-color: #747d8c ;
+  background-color: #7f8c8d ;
   color: white;
 }
 
@@ -52,7 +53,7 @@ html {
   padding: 20px 20px;
   text-decoration: none;
   font-weight: bold;
-  color: black;
+  color: white;
 }
 
 /* menu */
@@ -75,7 +76,7 @@ html {
 }
 
 .nav .menu-icon .navicon {
-  background: #333;
+  background: white;
   display: block;
   height: 2px;
   position: relative;
@@ -85,7 +86,7 @@ html {
 
 .nav .menu-icon .navicon:before,
 .nav .menu-icon .navicon:after {
-  background: #333;
+  background: white;
   content: '';
   display: block;
   height: 100%;
@@ -159,13 +160,15 @@ html {
 }
 
 .top-img {
-  background-image: url(/images/coding\ background.jpeg);
-  height: 30rem;
+  background-image: url(/images/background-shapes2.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 40rem;
   width: 100%;
 }
 
 .round-cointainer-profile-img {
-  margin-top: 6rem;
+  margin-top: 4rem;
   position: absolute;
 }
 
@@ -176,7 +179,7 @@ html {
 }
 
 .social-icons {
-  margin-top: 13rem;
+  margin-top: 3rem;
 }
 
 .social-icons a {
@@ -200,7 +203,7 @@ html {
 .h1 {
   font-size: 4rem;
   font-weight: bold;
-  color: #333;
+  color: #2c3e50;
 }
 
 .h3-main {
@@ -218,7 +221,7 @@ html {
 .web-screenshot {
   max-width:100%;
   height:auto;
-  border: 2px solid #0c2461;
+  border: 2px solid #2c3e50;
   border-radius: 5px;
 }
 
@@ -244,13 +247,13 @@ html {
 
 .up-footer {
   height: 20rem;
-  background-color: #4b4b4b;
+  background-color: #34495e;
   color: whitesmoke;
 }
 
 .subfooter {
   height: 4rem;
-  background-color: #3d3d3d;
+  background-color: #2c3e50;
 }
 
 .footer-title {
