--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -243,7 +243,7 @@ html {
 }
 
 .portfolio-description {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
 }
 
 .btn {
@@ -255,7 +255,7 @@ html {
 	cursor: pointer;
 	padding: 25px 20px;
 	display: inline-block;
-	margin: 0px 40px 40px;
+	margin: 0px 20px 40px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	font-weight: 700;
@@ -306,20 +306,23 @@ html {
 }
 
 .subfooter {
-  height: 4rem;
+  height: auto;
   background-color: #2c3e50;
 }
 
 .footer-title {
-  font-size: 1.8rem;
+  font-size: 2rem;
   font-weight: bold;
   margin-bottom: 1.2rem;
   font-weight: 700;
   letter-spacing: 1px;
+  text-align: center;
 }
 
 .footer-text {
-  font-size: 1.3rem;
+  font-size: 1.6rem; 
+  line-height: 1.6; 
+  text-align: justify;
 }
 
 b {
@@ -327,6 +330,8 @@ b {
 }
 
 .copyright {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   color: #b2bec3;
+  padding: 3rem 0;
+  text-align: center;
 }
