--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -204,6 +204,7 @@ html {
   font-size: 4rem;
   font-weight: bold;
   color: #2c3e50;
+  text-align: center;
 }
 
 .h3-main {
@@ -221,8 +222,7 @@ html {
 .web-screenshot {
   max-width:100%;
   height:auto;
-  border: 2px solid #2c3e50;
-  border-radius: 5px;
+  border-bottom: 1px dashed #bdc3c7;
 }
 
 .portfolio-item {
@@ -230,6 +230,10 @@ html {
   flex-direction: column;
   align-items: center;
   margin-bottom: 6rem;
+  padding-bottom: 2rem;
+  border: 2px solid #bdc3c7;
+  border-radius: 3px;
+  background-color: #ecf0f1;
 }
 
 .portfolio-item-last {
@@ -323,6 +327,12 @@ html {
   font-size: 1.6rem; 
   line-height: 1.6; 
   text-align: justify;
+}
+
+.footer-list {
+  font-size: 1.6rem; 
+  line-height: 1.6; 
+  text-align: center;
 }
 
 b {
