--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -240,14 +240,21 @@ html {
   margin-bottom: 4rem;
 }
 
+.portfolio-link {
+  text-decoration: none;
+  color: #2c3e50;
+}
+
 .portfolio-title {
   font-size: 2.5rem;
   font-weight: bold;
   margin: 2rem 0;
+  text-align: center;
 }
 
 .portfolio-description {
   font-size: 1.6rem;
+  text-align: center;
 }
 
 .btn {
@@ -280,7 +287,7 @@ html {
 }
 
 .btn-2b {
-	border-radius: 0 0 5px 5px;
+	border-radius: 0 0 2px 2px;
 }
 
 .btn-2b:hover {
@@ -291,6 +298,28 @@ html {
 .btn-2b:active {
 	box-shadow: 0 0 #e67e22;
 	top: 6px;
+}
+
+@media (min-width: 48em) {
+  .main-portfolio {
+    max-width: 90vw;
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  
+  .portfolio-item-last {
+    margin-bottom: 6rem;
+  }
+
+  .portfolio-item {
+    margin: 1rem 1rem 4rem;
+  }
+
+  .btn {
+    margin: 0px 20px 80px;
+  }
 }
 
 /* Footer */
@@ -317,7 +346,7 @@ html {
 .footer-title {
   font-size: 2rem;
   font-weight: bold;
-  margin-bottom: 1.2rem;
+  margin: 1.5rem 0 3rem;
   font-weight: 700;
   letter-spacing: 1px;
   text-align: center;
@@ -335,6 +364,15 @@ html {
   text-align: center;
 }
 
+.footer-list-item a {
+  color: white;
+  text-decoration: none;
+}
+
+.footer-separator {
+  margin-bottom: 2rem;
+}
+
 b {
   font-weight: bold;
 }
@@ -344,4 +382,23 @@ b {
   color: #b2bec3;
   padding: 3rem 0;
   text-align: center;
+}
+
+@media (max-width: 48em) {
+  .footer-sitemap {
+    display: none;
+  }
+}
+
+@media (min-width: 48em) {
+  .up-footer {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 2rem 4rem;
+  }
+  
+  .footer-text {
+    margin-bottom: 2rem;
+  }
 }
