--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -179,7 +179,7 @@ html {
 }
 
 .social-icons {
-  margin-top: 3rem;
+  margin: 4rem 0 1rem;
 }
 
 .social-icons a {
@@ -201,14 +201,14 @@ html {
 }
 
 .h1 {
-  font-size: 4rem;
+  font-size: 6rem;
   font-weight: bold;
   color: #2c3e50;
   text-align: center;
 }
 
 .h3-main {
-  margin: 2rem 0;
+  margin: 4rem 0;
   font-size: 2rem;
 }
 
@@ -306,7 +306,8 @@ html {
     margin-top: 3rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: center;
   }
   
   .portfolio-item-last {
@@ -315,6 +316,7 @@ html {
 
   .portfolio-item {
     margin: 1rem 1rem 4rem;
+    width: 30%;
   }
 
   .btn {
