--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -175,7 +175,7 @@ html {
 .profile-img {
   height: 25rem;
   width: 25rem;
-  border: 2px solid white;
+  border-radius: 60%;
 }
 
 .social-icons {
@@ -190,6 +190,12 @@ html {
   height: 5rem;
   width: 5rem;
 }
+
+.social-icons a img:hover {
+  transform: scale(1.1);
+  transition: all .3s ease-in-out;
+}
+
 
 /* Main */
 
@@ -210,6 +216,10 @@ html {
 .h3-main {
   margin: 4rem 0;
   font-size: 2rem;
+}
+
+.h3-project-detail {
+  text-align: center;
 }
 
 .main-portfolio {
@@ -234,6 +244,11 @@ html {
   border: 2px solid #bdc3c7;
   border-radius: 3px;
   background-color: #ecf0f1;
+}
+
+.portfolio-item:hover {
+  transform: scale(1.05);
+  transition: all 0.6s ease-in-out;
 }
 
 .portfolio-item-last {
@@ -312,6 +327,87 @@ html {
 
 .main-portfolio-projects-page {
   margin-bottom: 4rem;
+}
+
+/* Main: Contact Page */
+
+.contact-main-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-img {
+  margin: 2rem 0;
+}
+
+.contact-description {
+  font-size: 2.2rem;
+  text-align: center;
+  margin-bottom: 4rem;
+  width: 70vw;
+}
+
+/* Contact Form */
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
 }
 
 /* Main: media queries */
