styling contact page

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -348,66 +348,79 @@ html {
   width: 70vw;
 }
 
+@media (min-width: 48em) {
+  .contact-main-section {
+    display: flex;
+    flex-direction: row;
+    /* align-items: center; */
+    align-content: space-between;
+  }
+
+  .contact-info {
+    text-align: center;
+    max-width: 50vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contact-description {
+    width: 30vw;
+  }
+
+}
+
 /* Contact Form */
 
 input[type=text], select, textarea {
   width: 100%;
-  padding: 12px;
+  padding: 1.5rem;
   border: 1px solid #ccc;
   border-radius: 4px;
   resize: vertical;
 }
 
-label {
-  padding: 12px 12px 12px 0;
+.label {
+  padding: 1rem 0;
   display: inline-block;
+  font-size: 1.8rem;
+  font-weight: 700;
+  color: #2c3e50;
 }
 
-input[type=submit] {
-  background-color: #4CAF50;
+.contact-form-submit {
+  background-color: #e67e22;
   color: white;
-  padding: 12px 20px;
+  padding: 2rem 10rem;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  float: right;
+  font-size: 1.6rem;
+  font-weight: bold;
+  margin-top: 2.5rem;
+  margin-left: 1.8rem;
 }
 
-input[type=submit]:hover {
-  background-color: #45a049;
+.contact-form-submit:hover {
+  background-color: #da6b0a;
 }
 
-.container {
+.contact-form {
   border-radius: 5px;
   background-color: #f2f2f2;
-  padding: 20px;
+  padding: 8rem;
 }
 
 .col-25 {
   float: left;
-  width: 25%;
-  margin-top: 6px;
+  width: 100%;
+  margin-top: 1rem;
 }
 
 .col-75 {
   float: left;
-  width: 75%;
-  margin-top: 6px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .col-25, .col-75, input[type=submit] {
-    width: 100%;
-    margin-top: 0;
-  }
+  width: 100%;
+  margin-top: 1rem;
 }
 
 /* Main: media queries */
